--- a/app/assets/stylesheets/projects_3d_scroll.scss
+++ b/app/assets/stylesheets/projects_3d_scroll.scss
@@ -150,17 +150,17 @@
 
   #projects-container {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(1, 1fr);
     grid-template-rows: auto auto auto;
   
     .projects-header {
-      grid-column: 1 / 4;
+      grid-column: 1;
       font-size: 3em;
       align-self: center;
     }
   
     .p-projects {
-      grid-column: 1 / 4;
+      grid-column: 1;
       grid-row: 2;
       font-size: 1em;
       margin: 0 1em 1em 1em;
@@ -168,7 +168,7 @@
   
     #scroll3d-iframe {
       grid-row: 3;
-      grid-column: 1 /4;
+      grid-column: 1;
       width: 100%;
       height: 80vh;
     }
